# TokenSquash

./: .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial_licensing.yml  config.yml  feature_request.yml  private_data_security.yml
.github/workflows/: tests.yml
benchmarks/: README.md  messy-char4.json  messy-cl100k.json  messy-cl100k.md  messy-heuristic.md  messy-o200k.json  messy-o200k.md  replies-cl100k.json  replies-cl100k.md  replies-o200k.json  replies-o200k.md
docs/: claims-policy.md  command-map.md  commercial-license.md  evidence-packs.md  first-real-corpus.md  post-release-flow.md  quickstart.md  real-turn-workflow.md  release-candidate.md  release-checklist.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.2.2.md  release-verification.md  sidecar-meaning-rubric.md  sidecar-ollama.md  v0.1.1-plan.md  v0.2.0-plan.md  v0.3.0-plan.md
examples/: agent-replies.jsonl  coding-prompts.jsonl  messy-coding-prompts.jsonl  quality-budget.json  real-prompts.template.jsonl  real-turns.template.jsonl
tests/: test_codec.py
tokensquash/: __init__.py  about.py  aliases.py  baselines.py  candidate.py  cli.py  codec.py  corpus.py  demo.py  doctor.py  guide.py  metrics.py  mining.py  readiness.py  release.py  release_assets.py  release_info.py  reply.py  sidecar.py  turns.py  workspace.py
tokensquash/data/: sample-turns.jsonl
