[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensquash"
version = "0.2.2"
description = "Local-first codec and evidence harness for measuring whether AI-agent task/reply traffic can be made shorter without losing meaning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Martin Ollett" }]
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "COMMERCIAL-LICENSE.md", "NOTICE.md"]

[project.scripts]
tokensquash = "tokensquash.cli:main"

[project.optional-dependencies]
tokenizer = ["tiktoken"]

[tool.setuptools.packages.find]
include = ["tokensquash*"]

[tool.setuptools.package-data]
tokensquash = ["data/*.jsonl"]
